--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
       <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/3.jpg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/4.jpg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/5.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/6.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/7.JPG)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/8.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/9.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/10.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/11.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/12.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/13.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/14.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/15.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/16.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/17.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/18.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/19.jpg)"></div>
 
       <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
@@ -105,8 +119,10 @@
                   <img src="assets/img/testimonials/1.jpg" class="testimonial-img" alt="">
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                    Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                    Semoga di tahun ini, kamu diberi banyak kemudahan, rezeki, kesehatan, dan banyak hal positif.
+                    Tetaplah menjadi Nadia yang kuat, cerdas, dan selalu menjadi Nadia yang aku kenal ya sayangkuu..
+                    I love you supletttt🫶🏻
+
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -119,8 +135,11 @@
                   <img src="assets/img/testimonials/2.jpg" class="testimonial-img" alt="">
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
-                    quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                    Oh iya, aku pengen kasih doa buat kita juga hehe..
+                    <br> Semoga kita kedepan nya semakin bisa mengerti satu sama lain, dilancarkan semua impian mu,
+                    semua
+                    impian kita, semua hal baik untuk hubungan kita, dan diberikan keharmonisan baik itu
+                    keluargamu maupun kita.
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -133,8 +152,9 @@
                   <img src="assets/img/testimonials/3.jpg" class="testimonial-img" alt="">
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim
-                    tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                    Terimakasih banyak sudah memberi banyak hal penting yang kamu punya untuk akuuu, aku sayangggg
+                    banget sama kamuu cuplettt❤
+                    God Bless you and family babe
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -147,8 +167,10 @@
                   <img src="assets/img/testimonials/4.jpg" class="testimonial-img" alt="">
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit
-                    minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                    by the way 2025? yaa salah satu impian besar kita ada di tahun itu, sebentar ya sayangku, aku harap
+                    kamu bersabar, aku sedang merangkai hal indah untuk mewujudkan impian besar kita di tahun itu,
+                    sementara aku masih bisa memberikan beberapa kado kecil kecil an ini, yang mungkin kamu ada yang
+                    engga suka, maaf yaa babe..
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -161,9 +183,8 @@
                   <img src="assets/img/testimonials/5.jpg" class="testimonial-img" alt="">
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim
-                    culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum
-                    quid.
+                    I love you not only now, tomorrow, or the day after. but forever I will put my full affection and
+                    love to you. I love you more babe❤
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
